# template-haskell-sample

./: .gitignore  CHANGELOG.md  ChangeLog.md  LICENSE  README.md  hie.yaml  package.yaml  template-haskell-sample.cabal
app/: Main.hs
data/: type.txt
src/: Lib.hs  Macro.hs
