cabal-version:      2.4
name:               template-haskell-sample
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:           https://github.com/tana-gh/template-haskell-sample

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             tana-gh
maintainer:         yozoranotakaku@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Lib,
        Macro

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        aeson,
        async,
        attoparsec,
        bytestring,
        filepath,
        free,
        lens,
        list-t,
        monad-par,
        mtl,
        operational,
        parallel,
        pipes,
        random,
        split,
        stm,
        template-haskell,
        text,
        transformers,
        vector

    hs-source-dirs:   src
    default-language: Haskell2010

executable template-haskell-sample
    main-is:          Main.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        template-haskell-sample

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite template-haskell-sample-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    build-depends:    base ^>=4.14.1.0
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
