cabal-version:      2.4
name:               template-haskell-sample
version:            0.1.0.0
synopsis:

homepage:           https://github.com/tana-gh/template-haskell-sample

license:            BSD-3-Clause
license-file:       LICENSE
author:             tana-gh
maintainer:         yozoranotakaku@gmail.com

extra-source-files: CHANGELOG.md

library
    default-language: Haskell2010
    hs-source-dirs:   src

    exposed-modules:
        Lib,
        Macro

    build-depends:
        base ^>=4.14.1.0,
        aeson,
        async,
        attoparsec,
        bytestring,
        filepath,
        free,
        lens,
        list-t,
        monad-par,
        mtl,
        operational,
        parallel,
        pipes,
        random,
        split,
        stm,
        template-haskell,
        text,
        transformers,
        vector

executable template-haskell-sample
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base ^>=4.14.1.0,
        template-haskell-sample

test-suite template-haskell-sample-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base ^>=4.14.1.0
