cabal-version:      2.4
name:               template-haskell-sample
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             tana-gh
maintainer:         yozoranotakaku@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common exe-options
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

library
    exposed-modules:
        Lib,
        Macro

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        aeson,
        async,
        attoparsec,
        bytestring,
        filepath,
        free,
        lens,
        list-t,
        monad-par,
        mtl,
        operational,
        parallel,
        pipes,
        random,
        split,
        stm,
        template-haskell,
        text,
        transformers,
        vector

    hs-source-dirs:   src
    default-language: Haskell2010

executable template-haskell-sample
    import: exe-options

    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        template-haskell-sample

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite template-haskell-sample-test
    import: exe-options

    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.1.0
